caching/Service-valkey-replicas.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: replica
    app.kubernetes.io/instance: valkey
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valkey
    app.kubernetes.io/part-of: valkey
    app.kubernetes.io/version: 8.1.4
    helm.sh/chart: valkey-4.0.10
  name: valkey-replicas
  namespace: caching
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/component: replica
    app.kubernetes.io/instance: valkey
    app.kubernetes.io/name: valkey
  sessionAffinity: None
  type: ClusterIP
